--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.js",
-    "start": "node src/app.js",
+    "start": "node src/index.js",
     "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.json",
     "test-debug": "node --experimental-vm-modules node_modules/jest/bin/jest.js --config=jest.config.json --detectOpenHandles"
   },
